--- a/new programs/index.html
+++ b/new programs/index.html
@@ -45,7 +45,7 @@
       <hr class="clear">
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3><a href="https://www.instagram.com/abhijitrewatkar12/#">abhijitrewatkar12</a>&nbsp; phone number=9699466910</h3>
+        <h3><a href="https://www.instagram.com/abhijitrewatkar12/#">abhijitrewatkar12</a></h3>
         <p>Feel free to contact me </p>
         <a class="BUTTON_KBJ" href="mailto:rewatkarabhijit5@email.com">CONTACT ME</a>
         
